--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/document/d/13Pnx8S4IleUIjQj9jq6il0YPFzyawAtfXM4BRUru81k/edit?usp=sharing" />
+<meta http-equiv="refresh" content="0; url=https://derzettsportfolio.carrd.co/" />
